2009-03-23  Miloslav Trmač  <mitr@redhat.com>

	* Makefile (VERSION): Version 2.9.14.
	* NEWS: Update.

	* tmpwatch.c: Only #include mntent.h on Linux.
	(is_mount_point): Only define on Linux, it is only used on Linux.

2009-02-05  Miloslav Trmač  <mitr@redhat.com>

	* tmpwatch.c (cleanupDirectory): Fix an incorrect message (#3).

2008-11-11  Miloslav Trmač  <mitr@redhat.com>

	* COPYING: New file.

2008-02-23  Miloslav Trmač  <mitr@redhat.com>

	* Makefile (VERSION): Version 2.9.13.

	* NEWS
	* README: New file.

	* Makefile (HGTAG): Replace CVSTAG.
	(force-tag, tag, archive): Update for Mercurial.

	* tmpwatch.c: Relicense to GPLv2.  Update Red Hat copyright message.
	(printCopyright): Update.

	* tmpwatch.8: Add a copyright message.